# SnazzGit

./: .gitignore  CLAUDE.md  CODE_SIGNING.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  test.yml
packaging/: CACHYOS.md  snazzgit.desktop
packaging/aur/: PKGBUILD
packaging/aur-git/: PKGBUILD
scripts/: bump-version.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  recent.rs  theme.rs
src-tauri/src/commands/: blame.rs  branches.rs  clone.rs  commits.rs  conflict.rs  credentials.rs  diff.rs  mod.rs  rebase.rs  recent.rs  reflog.rs  remotes.rs  repo.rs  search.rs  stash.rs  status.rs  tags.rs  theme.rs  watcher.rs
src-tauri/src/git/: blame.rs  branch.rs  clone.rs  commit.rs  conflict.rs  credentials.rs  diff.rs  error.rs  graph.rs  mod.rs  rebase.rs  reflog.rs  remote.rs  repository.rs  search.rs  stash.rs  status.rs  tag.rs  types.rs  watcher.rs
src/lib/components/branch/: BranchDialog.svelte  CheckoutRemoteDialog.svelte  MergeDialog.svelte
src/lib/components/commit/: CommitDetail.svelte  CommitGraph.svelte  CommitList.svelte  FileHistory.svelte  ReflogView.svelte
src/lib/components/diff/: CompareView.svelte  (+4 more)
src/lib/stores/: contextmenu.ts  repo.ts  theme.ts  ui.test.ts  ui.ts
src/lib/themes/: classic.ts  dark.ts  lollipop.ts  neon.ts  themes.test.ts
src/lib/types/: index.ts
src/lib/utils/: graph.test.ts  graph.ts  highlight.test.ts  highlight.ts  tauri.ts  worddiff.ts
src/routes/: +layout.svelte  +page.svelte
(+19 files in other folders)
